[package]
name = "source-demo-tool-crawler"
version = "0.8.2"
edition = "2021"
authors = ["Brett 'xNWP' Anthony <nwpbusiness@gmail.com>"]
description = "WIP: a gui tool for opening (editing planned) source engine demo files."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xNWP/source-demo-crawler/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-demo-tool = "0.9.2"
eframe = "0.21.0"
rfd = "0.11.0"
egui_extras = "0.21.0"